--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript-eslint": "^8.46.2"
   },
+  "exports": {
+    ".": {
+      "default": "./eslint.config.js",
+      "types": "./js/eslint.config.d.ts"
+    },
+    "./ruleOptions": {
+      "default": "./ruleOptions/index.js",
+      "types": "./js/ruleOptions/index.d.ts"
+    }
+  },
   "files": [
     "eslint.config.js",
     "js",
@@ -27,7 +37,6 @@
     "eslint",
     "eslintconfig"
   ],
-  "main": "eslint.config.js",
   "name": "@robinbobin/eslint-config",
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
   "peerDependencies": {
@@ -49,6 +58,5 @@
     "prettify": "tsc && eslint --fix && prettier . --write"
   },
   "type": "module",
-  "types": "js/eslint.config.d.ts",
   "version": "0.0.1"
 }
