--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "bugs": {
     "url": "https://github.com/RobinBobin/eslint-config/issues"
   },
-  "description": "My ESLint config",
-  "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@robinbobin/prettier-config": "^0.0.3",
-    "@robinbobin/ts-config": "^0.0.2",
+  "dependencies": {
+    "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
+    "@typescript-eslint/parser": "^8.46.3",
+    "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.46.3"
+  },
+  "description": "My ESLint config",
+  "devDependencies": {
+    "@robinbobin/prettier-config": "^0.0.3",
+    "@robinbobin/ts-config": "^0.0.2"
   },
   "exports": {
     ".": {
@@ -41,17 +43,6 @@
   ],
   "name": "@robinbobin/eslint-config",
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
-  "peerDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@stylistic/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript-eslint": "^8.46.2"
-  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/RobinBobin/eslint-config.git"
