--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^8.46.3",
-    "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-promise": "^7.2.1",
@@ -17,7 +16,8 @@
   "description": "My ESLint config",
   "devDependencies": {
     "@robinbobin/prettier-config": "^0.0.3",
-    "@robinbobin/ts-config": "^0.0.2"
+    "@robinbobin/ts-config": "^0.0.2",
+    "eslint": "^9.39.1"
   },
   "exports": {
     ".": {
@@ -43,6 +43,9 @@
   ],
   "name": "@robinbobin/eslint-config",
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
+  "peerDependencies": {
+    "eslint": "^9.39.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/RobinBobin/eslint-config.git"
